Fixed CSS Minify Issue about z-index

--- a/src/styles/content-fab.scss
+++ b/src/styles/content-fab.scss
@@ -19,7 +19,7 @@ weel {
     left: 0;
     top: 0;
     position: fixed;
-    z-index: 9999999999999999999999;
+    z-index: 999999;
 
     &._on {
       visibility: visible !important;
